<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="eu.xn__emaitis_cxb.mokslai.docs.NaujasIrasasActivity">

    <ScrollView
        android:layout_width="368dp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/naujasIrasasRegistracijosNumeris"/>
            <EditText
                android:id="@+id/registracijosNumeris"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/naujasIrasasDokumentoNumeris"/>
            <EditText
                android:id="@+id/dokumentoNumeris"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/naujasIrasasTipas"/>
            <RadioGroup
                android:id="@+id/tipas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/naujasIrasasTipasSaskaita"/>
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/naujasIrasasTipasRastas"/>
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/naujasIrasasTipasDraudimas"/>
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/naujasIrasasTipasGarantija"/>
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/naujasIrasasTipasKtDokumentas"/>
            </RadioGroup>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/naujasIrasasSiuntejas"/>
            <EditText
                android:id="@+id/siuntejas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/naujasIrasasGavejas"/>
            <EditText
                android:id="@+id/gavejas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/naujasIrasasAprasymas"/>
            <EditText
                android:id="@+id/aprasymas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/naujasIrasasArAtsakyti"/>
            <CheckBox
                android:id="@+id/atsakytiTaip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Taip"/>
            <CheckBox
                android:id="@+id/atsakytiNe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Ne"/>
            <Button
                android:id="@+id/siusti"
                android:text="@string/naujasIrasasSiusti"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </ScrollView>
</android.support.constraint.ConstraintLayout>
