<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="eu.xn__emaitis_cxb.mokslai.docs.LoginActivity">
    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_paddingStart="20dp"
        android:layout_paddingEnd="20dp"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="0dp">
        <ImageView
            android:layout_width="368dp"
            android:layout_height="100dp"
            android:src="@drawable/logo"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="8dp" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:text="@string/vartotojoVardas"
             android:layout_marginLeft="20dp" />
        <EditText
            android:id="@+id/vartotojoVardas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            >
            <requestFocus />
        </EditText>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp"
            android:text="@string/vartotojoSlaptazodis"/>
        <EditText
            android:id="@+id/vartotojoSlaptazodis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="8dp">
            <requestFocus />
        </EditText>
        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/loginPrisijungti"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="0dp" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
